--- a/notebooks/coding/transformers_attention.ipynb
+++ b/notebooks/coding/transformers_attention.ipynb
@@ -28,7 +28,7 @@
     "* Input and output are vectors.\n",
     "    * Size has been set to 512 to simplify the structure.\n",
     "* Each encoder and decoder blocks are repeated 6 times in the original work.\n",
-    "* Attention mechanism forms the bottlenect between the encoder and the decoder section.\n"
+    "* Attention mechanism forms the bottleneck between the encoder and the decoder section.\n"
    ]
   },
   {
